--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "last 2 versions",
     "not dead"
   ],
-  "homepage": "https://munseunggyu.github.io/vue-todo-cordova"
+  "homepage": "https://munseunggyu.github.io/vue_todo_cordova"
 }
